<resources>
    <string name="app_name">MeConecto</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Logros</string>
    <string name="title_notifications">Noticias</string>
    <string name="title_amigos">Amigos</string>
    <string name="title_ranking">Padres</string>
    <string name="txtGrooming">Grooming</string>
    <string name="txtSexting">Sexting</string>
    <string name="txtSextortion">Sextortion</string>
    <string name="txtAvatar">Avatar</string>
    <string name="txtDemoTitle">Grooming</string>
    <string name="txtItem">Item texto</string>
    <string name="title_activity_lista_dinamicas">ListaDinamicas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="vacio">.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="puntos">Puntos</string>
    <string name="txtDemo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id facilisis lectus. Ut vel ipsum fringilla, sodales sem ac, laoreet magna. Maecenas augue nisl, imperdiet eu lacus sed, tempor faucibus lectus. Pellentesque vestibulum cursus venenatis. Duis justo nulla, condimentum consectetur sem eget, cursus molestie nisi. Aliquam mattis est id risus volutpat accumsan. Maecenas tincidunt nulla in hendrerit egestas. Aliquam erat volutpat. Integer vehicula gravida elementum.</string>
    <string name="txtNoAmigos">No tienes amigos en tu lista, presiona el botón + debajo para enviarles un link y que se conecten</string>
    <string name="amigoExiste">Amigo ya existe</string>
    <string name="addAmigos">Agrega amigos</string>
    <string name="txtCopiar">Copiar</string>
    <string name="txtCerrar">Cerrar</string>
    <string name="errorDynamicLink">Error al generar el link</string>
    <string name="txtLogro">Logro</string>
    <string name="txtVervideo">Ver video</string>
    <string name="txtFelicidades">¡Completaste la actividad!</string>
    <string name="txtLosiento">Sigue intentando</string>
    <string name="txtNopuntos">No completaste esta actividad</string>
    <string name="meconecto">Meconecto</string>
    <string name="tools">Tools</string>
    <string name="txtHasConseguido">has conseguido la insignia:</string>
    <string name="txtCat1">EN PELIGRO</string>
    <string name="txtCat2">INFORMADO</string>
    <string name="txtCat3">PROTEGIDO</string>
    <string name="txtCat4">EQUIPADO</string>
    <string name="txtCat5">CONTROL PARENTAL</string>
    <string name="txtEstado">Estado:</string>
    <string name="txtSeguro">¿Estas seguro que terminaste?</string>
    <string name="txtSi">Si</string>
    <string name="txtNo">No</string>
    <string name="txtInsignias">Insignias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtListAvatar">Avatares</string>
    <string name="txtSeleccionar">Seleccionar</string>
    <string name="cambioNivel">Tu avatar subio de nivel!</string>
    <string name="txtVideo">Video</string>
    <string name="nuevoAmigo">Nuevo amigo agregado</string>
    <string name="txtNomAvatar">(Nombre de tu avatar)</string>
    <string name="txtGuiaPadres">Guía para padres</string>
    <string name="txtAmigaSvet">Comunícate con Tu Amiga SVET. Puedes contactarnos via whatsapp o messenger enviando la palabra AMIGA.</string>
    <string name="txtWhatsapp">Whatsapp Amiga SVET</string>
    <string name="txtMessger">Messenger Amiga SVET</string>
    <string name="mirarvideos">Aumenta tus conocimientos, mira esta serie de videos con consejos útiles para navegar en el ciber espacio</string>
    <string name="btnOk">Ok</string>
    <string name="video_web_label">VideoWeb</string>
    <string name="txtInvitaamigos">Envía este link a tus amigos y después que lo usen apareceran en tu listado</string>
</resources>