<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/iconmenu1"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_amigos"
        android:icon="@drawable/iconmenu2"
        android:title="@string/title_amigos" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/iconmenu3"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/iconmenu4"
        android:title="@string/title_ranking" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/iconmenu5"
        android:title="@string/title_notifications" />

</menu>