<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="#fff"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/fail" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLosiento"
            android:textAlignment="center"
            android:textColor="@color/txtEstadoPendiente"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNopuntos"
            android:textAlignment="center" />


        <Button
            android:id="@+id/btnSample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCerrar" />

    </LinearLayout>


</RelativeLayout>