<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="64dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layoutDirection="inherit"
            app:srcCompat="@drawable/icon_sure" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSeguro"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/txtSi"
            android:textColor="@color/txtEstadoCompleta"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/txtNo"
            android:textColor="@color/txtEstadoPendiente" />
    </LinearLayout>

</RelativeLayout>