<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="4"
                android:text="@string/txtAmigaSvet" />

            <ImageButton
                android:id="@+id/btnWhatsapp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:contentDescription="@string/txtWhatsapp"
                android:scaleType="centerInside"
                android:src="@drawable/whats" />

            <ImageButton
                android:id="@+id/btnMessenger"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:contentDescription="@string/txtMessger"
                android:scaleType="fitCenter"
                android:src="@drawable/messenger2" />
        </LinearLayout>

        <WebView
            android:id="@+id/paginaNoticias"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>